styles.css
@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');

:root {
   --orange: hsl(25, 97%, 53%);
   --white: hsl(0, 0%, 100%);
   --text-color: hsl(217, 12%, 63%);
   --button-color: hsl(216, 12%, 54%);
   --card-color: hsl(213, 19%, 18%);
   --background-color: hsl(216, 12%, 8%);
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--background-color);
    font-family: 'Overpass', sans-serif;
    margin: 0;
    padding: 0;
}

p {
    font-size: 15px;
    color: var(--text-color)
}

a {
    color: var(--orange)
}

h2 {
    color: var(--white);
    margin-bottom: 0;
}

button {
    cursor: pointer;
}

.main-container {
    height: 55vh;
    background-color: var(--card-color);
    border-radius: 8px;
    padding: 15px;
    width: 25%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    
    @media (max-width: 550px) {
        width: 80%;
        padding: 15px;
        height: 45vh;
    }
}

.button-container {
    display: flex;
    justify-content: space-between;
}

.round-button {
    background-color: var(--card-color);
    filter: brightness(120%);
    width: 40px;
    height: 40px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    color: var(--text-color);

    img {
        object-fit: contain;
        width: 20px;
        height: 20px;
    }
}

.round-button:hover {
    background-color: var(--text-color);
    color: var(--white)
}

.submit-button {
    background-color: var(--orange);
    width: 100%;
    border-radius: 50px;
    border: none;
    height: 50px;
    margin-top: 15px;
}

.submit-button:hover {
    background-color: var(--white);
    color: var(--orange)
}

.clicked-rating {
    background-color: var(--orange);
    color: var(--white)
}

.img-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 15px;

    img {
        object-fit: contain;
    }
}

.selection {
    background-color: var(--card-color);
    filter: brightness(120%);
    width: 60%;
    height: 40px;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
}

.center-text{
    text-align: center;
}

.orange-text {
    color: var(--orange)
}

